# midas-coin-wallet

./: .gitmodules  CMakeLists.txt  LeftPanel.qml  Makefile  MiddlePanel.qml  README.md  main.qml  qml.qrc
cmake/: Deploy.cmake
components/: AdvancedOptionsItem.qml  CheckBox.qml  CheckBox2.qml  ContextMenu.qml  ContextMenuItem.qml  DaemonManagerDialog.qml  DatePicker.qml  DevicePassphraseDialog.qml  Dialog.qml  IconButton.qml  InlineButton.qml  Input.qml  InputDialog.qml  InputMulti.qml  Label.qml  LabelButton.qml  LabelSubheader.qml  LanguageButton.qml  LanguageSidebar.qml  LineEdit.qml  LineEditMulti.qml  MenuBar.qml  MenuButton.qml  MenuButtonDivider.qml  Navbar.qml  NetworkStatusItem.qml  PasswordDialog.qml  ProcessingSplash.qml  ProgressBar.qml  QRCodeScanner.qml  RadioButton.qml  RemoteNodeDialog.qml  RemoteNodeEdit.qml  RemoteNodeList.qml  SettingsListItem.qml  Slider.qml  StandardButton.qml  StandardDialog.qml  StandardDropdown.qml  SuccessfulTxDialog.qml  (+9 more)
components/effects/: ColorTransition.qml  GradientBackground.qml  ImageMask.qml
installers/windows/: Monero.iss
pages/: Account.qml  AddressBook.qml  Advanced.qml  History.qml  Keys.qml  Mining.qml  Receive.qml  SharedRingDB.qml  Sign.qml  Transfer.qml  TxKey.qml
pages/merchant/: Merchant.qml  MerchantCheckbox.qml  MerchantTitlebar.qml  MerchantTrackingList.qml
pages/settings/: Settings.qml  SettingsInfo.qml  SettingsLayout.qml  SettingsLog.qml  SettingsNode.qml  SettingsWallet.qml
share/: Info.plist  org.getmidas.Midas.desktop  org.getmidas.Midas.metainfo.xml  org.getmidas.Midas.yaml
src/: CMakeLists.txt
src/daemon/: DaemonManager.cpp  DaemonManager.h
src/libwalletqt/: TransactionHistory.cpp
src/main/: Logger.cpp  main.cpp
src/openpgp/: CMakeLists.txt
src/qt/: KeysFiles.cpp  KeysFiles.h  MidasSettings.cpp  MidasSettings.h  TailsOS.cpp  ipc.cpp  updater.cpp  utils.cpp
translations/: monero-core.ts  monero-core_af.ts  monero-core_ar.ts  monero-core_az.ts  monero-core_bg.ts  monero-core_bn.ts  monero-core_cat.ts  monero-core_cs.ts  monero-core_da.ts  monero-core_de.ts  monero-core_el.ts  monero-core_eo.ts  monero-core_es.ts  monero-core_fa.ts  monero-core_fi.ts  monero-core_fr.ts  monero-core_ga.ts  monero-core_he.ts  monero-core_hi.ts  monero-core_hr.ts  monero-core_hu.ts  monero-core_id.ts  monero-core_is.ts  monero-core_it.ts  monero-core_ja.ts  monero-core_kmr.ts  monero-core_ko.ts  monero-core_lt.ts  monero-core_nb.ts  monero-core_ne.ts  monero-core_nl.ts  monero-core_pl.ts  monero-core_pt-br.ts  monero-core_pt-pt.ts  monero-core_ro.ts  monero-core_ru.ts  monero-core_sk.ts  monero-core_sl.ts  monero-core_sr.ts  monero-core_sv.ts  (+8 more)
wizard/: SeedListGrid.qml  SeedListItem.qml  WizardAskPassword.qml  WizardController.qml  WizardCreateDevice1.qml  WizardCreateWallet1.qml  WizardCreateWallet2.qml  WizardCreateWallet3.qml  WizardCreateWallet4.qml  WizardCreateWallet5.qml  WizardDaemonSettings.qml  WizardHeader.qml  WizardHome.qml  WizardLanguage.qml  WizardMenuItem.qml  WizardModeBootstrap.qml  WizardModeRemoteNodeWarning.qml  WizardModeSelection.qml  WizardNav.qml  WizardOpenWallet1.qml  WizardRestoreWallet1.qml  WizardRestoreWallet2.qml  WizardRestoreWallet3.qml  WizardRestoreWallet4.qml  WizardSummary.qml  WizardSummaryItem.qml  WizardWalletInput.qml
